--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>customer-service</module>
         <module>notification-service</module>
         <module>loyalty-service</module>
+        <module>booking-service</module>
     </modules>
 
     <properties>
@@ -60,6 +61,12 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
+                <version>${springsecurity.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-broker</artifactId>
                 <version>${springsecurity.version}</version>
             </dependency>
 
